# MacOSLocalAPI

./: .gitignore  LICENSE  README.md  README_en.md  pyproject.toml  test_main.http
app/: __init__.py  app_factory.py  config.py  registry.py
app/api/v1/: audio.py  openai.py
app/engine/: base.py  cosyvoice_tts.py  echo_engine.py  macos_say_tts.py  mlx_audio_plus_tts.py  mlx_engine.py  piper_tts.py  tts_base.py
app/schemas/: openai.py
app/utils/: audio_wav.py
scripts/: mlx_smoke.py
tests/: test_audio_wav_utils.py  test_mlx_audio_plus_tts_engine.py  test_openai_api.py  test_tts_api.py
